fix sharethis collapse

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -838,7 +838,7 @@ p.date:before, p.date:after {
     position: fixed;
     z-index: 10;
     top: 0px;
-    padding-right: 400px;
+
 }
 
 
